Added database and dao classes - TODO finish and test. TeamFragment is working, but it's ugly - styling needed.